# personal-ai-os

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REVIEWS.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  retrieval-quality.yml
app/: CLAUDE.md  config.py  main.py
app/agents/: CLAUDE.md  coder.py  executor.py  memory_agent.py  planner.py  researcher.py  (+2 more)
docs/: CLAUDE.md  development-roadmap.md  open-source-readiness.md  testing.md
scripts/: CLAUDE.md  check_embedding_provider.py  check_runtime_config.py  evaluate_qdrant_retrieval_quality.py  evaluate_retrieval_quality.py  import_obsidian_vault.py  run_mcp_server.py  run_migrations.py  smoke_api.sh  sync_obsidian_vault.py
tests/: CLAUDE.md  test_agent_plan.py  test_agent_specialists.py  test_agent_workflow.py  test_agents_route.py  test_auth.py  test_chat_persistence.py  test_cli.py  test_config_validation.py  test_db_migrations.py  test_diagnostics.py  test_embedding_provider.py  test_errors.py  test_mcp_server.py  test_memory_pipeline.py  test_obsidian_importer.py  test_obsidian_sync.py  test_obsidian_writer.py  test_openai_compat.py  test_packaging_contracts.py  test_project_contracts.py  test_provider_reliability.py  test_request_context.py  test_retrieval_quality.py  test_retriever.py  test_scheduler_jobs.py  test_scheduler_lifecycle.py  test_scheduler_status.py  test_session_identity.py  test_sessions_route.py  test_task_route.py  test_tool_registry.py  test_tools_route.py  test_vector_store.py
(+75 files in other folders)
