[project]
name = "personal-ai-os"
version = "0.1.0"
description = "Local-first Personal AI OS template"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Personal AI OS contributors" }]
license = { file = "LICENSE" }
keywords = ["personal-ai", "rag", "open-webui", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "qdrant-client>=1.8",
  "openai>=1.30",
  "anthropic>=0.20",
  "typer>=0.12",
  "python-slugify>=8.0",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "pytest>=8.0"
]

[project.urls]
Homepage = "https://github.com/julesChu12/personal-ai-os"
Repository = "https://github.com/julesChu12/personal-ai-os.git"
Issues = "https://github.com/julesChu12/personal-ai-os/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require Docker services",
]
